# mlem

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  renovate.json  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  release-drafter.yml
.github/ISSUE_TEMPLATE/: epic-or-story.md
.github/workflows/: check-heroku-tests.yml  check-test-release.yml  test.yml
mlem/: __init__.py  analytics.py  config.py  constants.py  ext.py  log.py  telemetry.py  ui.py  version.py
mlem/api/: __init__.py  commands.py  migrations.py  utils.py
mlem/cli/: __init__.py  apply.py  build.py  checkenv.py  clone.py  config.py  create.py  declare.py  deploy.py  deployment.py  dev.py  env.py  get.py  import.py  import_object.py  import_path.py  info.py  init.py  link.py  main.py  migrate.py  package.py  serve.py  types.py  utils.py
mlem/contrib/: __init__.py  bitbucketfs.py  callable.py  catboost.py  dvc.py  fastai.py  fastapi.py  git.py  github.py  gitlabfs.py  grpc.py  lightgbm.py  numpy.py  onnx.py  pandas.py  pil.py  prometheus.py  rabbitmq.py  requirements.py  scipy.py  sklearn.py  tensorflow.py  torch.py  torchvision.py  transformers.py  venv.py  xgboost.py
mlem/core/: __init__.py  artifacts.py  base.py  data_type.py  dataset_type.py  errors.py  file_import.py  hooks.py  import_objects.py  index.py  meta_io.py  metadata.py  model.py  objects.py  (+2 more)
tests/: __main__.py  conftest.py  test_analytics.py  test_config.py  test_ext.py  test_setup.py  test_telemetry.py
tests_requirements/: model_trainer.py  test_requirements.py
(+202 files in other folders)
